ForwardRelativePath in Watchman events
Summary:
Use `ForwardRelativePath` in Watchman events.

Mostly as assertion that paths are normalized.

I want to fix `DaemonicParserState` one day, cleanups like this one as as in previous diff might help.

Reviewed By: bobyangyf

fbshipit-source-id: 522ba21a5d9b0c8b2cd5c631e5c68322c037490c